--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -7,9 +7,58 @@
 <form method="post">
     <label>Name</label>
     <input name="Name" />
-
+    <br />
     <label>Descritions</label>
-    <input name="Description"/>
+    <input name="Description" />
+    <br />
+    <label>Image</label>
+    <input name="ImageURL" id="ImageURL" type="hidden" />
+    <input id="imageUpload" name="Image" type="file" accept=".png, .jpg" />
+    <br />
+    <div class="thumb">
+        <img id="categoryImage" alt="Image">
+    </div>
     <br />
     <button>Save</button>
 </form>
+
+<script>
+    $("#imageUpload").change(function () {
+        var element = this                        //Mean changefunction this time is this 
+
+        var formData = new FormData();
+
+        var totalFiles = element.files.length;      //multiple file 
+
+        for (var i = 0; i < totalFiles; i++)
+        {
+            var file = element.files[i];
+            formData.append("Photo", file);     //sabhi filo ko formData ke ander add kr reha hai
+        }
+
+        $.ajax({
+            type: 'POST',
+            url: '/Shared/UploadImage',
+            dataType: 'json',
+            data: formData,
+            contentType: false,
+            processData: false
+        })
+            .done(function (response) {
+                debugger;
+                console.log(response);  //
+                if (response.Success == true)
+                {
+                    $("#ImageURL").val(response.ImageURL);
+                    $("#categoryImage").attr("src", response.ImageURL);
+                }
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
+
+
+
+
+    });
+</script>
