Bootstrap Apply Product

--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -3,15 +3,19 @@
     ViewBag.Title = "Index";
 }
 
-<div id="tableContainer">
-    @{
-        Html.RenderAction("ProductTable");
+<div class="container">
+    <div id="tableContainer">
+        @{
+            Html.RenderAction("ProductTable");
 
-        //Html.RenderAction("Create");    
-    }
-</div>
+            //Html.RenderAction("Create");
+        }
+    </div>
+    <hr />
 
-<div id="actionContainer">
+    <div id="actionContainer">
 
+
+    </div>
 
 </div>
