--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -3,30 +3,36 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create Product</h2>
 
-<form id="createProduct">
-    <label>Catergory</label>
-    <select name="categoryID">
-        @foreach (var catergory in Model)
-        {
-            <option name value="@catergory.ID">@catergory.Name</option>
-        }
+<div class="container">
+    <h2>Create Product</h2>
+    <br />
+    <form id="createProduct">
+        <div class="form-group">
+            <label>Catergory</label>
+            <select class="form-control" name="categoryID">
+                @foreach (var catergory in Model)
+                {
+                    <option name value="@catergory.ID">@catergory.Name</option>
+                }
 
-    </select>
-    <br />
-    <label>Name</label>
-    <input name="Name"/>
-    <br />
-    <label>Description</label>
-    <input name="Description"/>
-    <br />
-    <label>Price</label>
-    <input name="Price" />
-    <br />
-    <button id="saveBtn" type="button">Save</button>
-</form>
-
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" name="Name" />
+        </div>
+        <div class="form-group">
+            <label>Description</label>
+            <input class="form-control" name="Description" />
+        </div>
+        <div class="form-group">
+            <label>Price</label>
+            <input class="form-control" name="Price" />
+        </div>
+        <button id="saveBtn" type="button">Save</button>
+    </form>
+</div>
 
 <script>
 
