--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -3,25 +3,37 @@
     ViewBag.Title = "Create";
 }
 
+<div class="container">
 <h2>Create</h2>
-<form method="post">
-    <label>Name</label>
-    <input name="Name" />
-    <br />
-    <label>Descritions</label>
-    <input name="Description" />
-    <br />
-    <label>Image</label>
-    <input name="ImageURL" id="ImageURL" type="hidden" />
-    <input id="imageUpload" name="Image" type="file" accept=".png, .jpg" />
-    <br />
-    <div class="thumb">
-        <img id="categoryImage" alt="Image">
+<form id="createcategory">
+    <div class="form-group">
+        <label>Name</label>
+        <input class="form-control" name="Name" />
+    </div>
+    <div class="form-group">
+        <label>Descritions</label>
+        <input class="form-control" name="Description" />
+    </div>
+
+    <div class="form-group">
+        <label>Image</label>
+        <input name="ImageURL" id="ImageURL" type="hidden" />
+        <input id="imageUpload" name="Image" type="file" accept=".png, .jpg" />
+    </div>
+    <div class="form-group">
+        <div class="thumb">
+            <img id="categoryImage" alt="Image">
+        </div>
     </div>
     <br />
-    <button>Save</button>
+    <div class="form-group">
+        <label>Is Featured?</label>
+        <input name="isFeatured" type="radio" value="True" />True
+        <input name="isFeatured" type="radio" value="False" />False
+    </div>
+        <button id="saveBtn" type="button">Save</button>
 </form>
-
+    </div>
 <script>
     $("#imageUpload").change(function () {
         var element = this                        //Mean changefunction this time is this 
@@ -60,5 +72,22 @@
 
 
 
+    });
+
+
+    $("#saveBtn").click(function () {
+        var searchValue = $("#searchTxt").val();
+        $.ajax({
+            type: 'POST',
+            url: '/Category/Create',
+            data: $("#createcategory").serialize()
+        })
+            .done(function (response) {
+                $("#tableContainer").html(response);
+                $("#actionContainer").html("");
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
     });
 </script>
