--- a/ClothBazar.Web/Views/Home/Index.cshtml
+++ b/ClothBazar.Web/Views/Home/Index.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewBag.Title = "Home Page";
+    var oneCategory = Model.featuredCategories[0];
+    var twoCategory = Model.featuredCategories[1];
+    var threeCategory = Model.featuredCategories[2];
+    var fourthcategory = Model.featuredCategories[3];
 
-    var firstCategory =Model.Categories.Where(s => s.ImageURL != null).First();
-    
 }
 
 
@@ -187,7 +189,6 @@
     </div>
 </div>
 <!-- END SLIDER -->
-
 <!-- IMAGE BOX -->
 <section class="flat-row row-image-box">
     <div class="container">
@@ -196,13 +197,17 @@
                 <div class="flat-image-box style-1 data-effect div-h22 clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="@firstCategory.ImageURL" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">@firstCategory.Name</a>
+                            @if (oneCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@oneCategory.ImageURL" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@oneCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
-                            </div>
+                            }
+
                         </div>
                     </div>
                 </div>
@@ -211,25 +216,31 @@
                 <div class="flat-image-box style-1 row2 data-effect clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="~/Content/images/image-box/imgbox-1-375x240.jpg" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For Kid’s</a>
+                            @if (twoCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@twoCategory.ImageURL" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@twoCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
-                            </div>
+                            }
                         </div>
                     </div>
 
                     <div class="item data-effect-item">
                         <div class="inner">
+                            @if (threeCategory != null)
+                            {
                             <div class="thumb">
-                                <img src="~/Content/images/image-box/imgbox-2-375x240.jpg" alt="Image">
+                                <img src="@threeCategory.ImageURL" alt="Image">
                                 <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">accessories</a>
+                                    <a href="#" class="themesflat-button bg-white width-150">@threeCategory.Name</a>
                                 </div>
                                 <div class="overlay-effect bg-color-1"></div>
                             </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -238,13 +249,17 @@
                 <div class="flat-image-box style-1 data-effect div-h20 clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
+                            @if (fourthcategory != null)
+                            {
                             <div class="thumb">
-                                <img src="~/Content/images/image-box/imgbox-2-375x500.jpg" alt="Image">
+                              
+                                <img src="@fourthcategory.ImageURL" alt="Image">
                                 <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For woMen’s</a>
+                                    <a href="#" class="themesflat-button bg-white width-150">@fourthcategory.Name</a>
                                 </div>
                                 <div class="overlay-effect bg-color-1"></div>
                             </div>
+                            }
                         </div>
                     </div>
                 </div>
