--- a/ClothBazar.Web/Views/Category/CategoryTable.cshtml
+++ b/ClothBazar.Web/Views/Category/CategoryTable.cshtml
@@ -58,13 +58,16 @@
     </table>
 </div>
 
+@{ 
+    var URL = Url.Action("CategoryTable", "Category");
+}
 
 <script>
 
     $("#searchBtn").click(function () {
         var searchValue = $("#searchTxt").val();
         $.ajax({
-            url: '/Category/CategoryTable',
+            url: '@Url.Action("CategoryTable", "Category")',//'/Category/CategoryTable',
             data: {
                 search: searchValue
             }
