page no is property working category delete is not working

--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -1,5 +1,7 @@
-﻿
-@model List<Product>
+﻿@model ProductSerachViewModel
+
+
+
 @{
     ViewBag.Title = "ProductTable";
 }
@@ -12,14 +14,14 @@
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search Here" name="search" id="searchTxt" aria-label="Recipient's username with two button addons" aria-describedby="button-addon4">
             <div class="input-group-append" id="button-addon4">
-                <button  id="searchBtn" type="button">Search</button>
-                <button  id="newBtn" type="button">New</button>
+                <button id="searchBtn" type="button">Search</button>
+                <button id="newBtn" type="button">New</button>
             </div>
         </div>
 
     </form>
-  
-    
+
+
 </div>
 
 <div>
@@ -33,7 +35,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var product in Model)
+            @foreach (var product in Model.products)
             {
                 <tr>
                     <td>@product.Name</td>
@@ -58,10 +60,34 @@
             }
         </tbody>
     </table>
+    <div>
+
+        <button class="pageButtons" data-pageNo="@(Model.pageNo - 1)">Previous</button>
+
+        <button class="pageButtons" data-pageNo="@(Model.pageNo + 1)">Next</button>
+    </div>
 </div>
 
 
 <script>
+   
+    $(".pageButtons").click(function () {
+        debugger;
+        $.ajax({    
+            url: '/Product/ProductTable',
+            data: {
+                pageNo: $(this).attr('data-pageNo')
+            }
+        })
+            .done(function (response) {
+                $("#tableContainer").html(response);
+            })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("Fail");
+            });
+    });
+    
+
 
     $("#searchBtn").click(function () {
         var searchValue = $("#searchTxt").val();
@@ -79,7 +105,7 @@
             });
     });
 
-    
+
     $("#newBtn").click(function () {
         $.ajax({
             url: '/Product/Create',
@@ -95,11 +121,11 @@
 
 
     $(".editBtn").click(function () {
-       
+
         $.ajax({
             url: '/Product/Edit',
             data: {
-                ID : $(this).attr('data-id')
+                ID: $(this).attr('data-id')
             }
         })
             .done(function (response) {
@@ -122,26 +148,26 @@
         })
             .then((willDelete) => {
                 if (willDelete) {
-                    
+
                     $.ajax({
-                    type: 'POST',
-                    url: '/Product/Delete',
-                    data: {
-                        ID: $(this).attr('data-id')
-                    }
-                })
-                .done(function (response) {
-                    $("#tableContainer").html(response);
-                    swal("Poof! Product has been deleted!", {
-                        icon: "success",
-                    });
-                })
-                .fail(function (XMLHttpRequest, textStatus, errorThrown) {
-                    alert("Fail");
-                });
+                        type: 'POST',
+                        url: '/Product/Delete',
+                        data: {
+                            ID: $(this).attr('data-id')
+                        }
+                    })
+                        .done(function (response) {
+                            $("#tableContainer").html(response);
+                            swal("Poof! Product has been deleted!", {
+                                icon: "success",
+                            });
+                        })
+                        .fail(function (XMLHttpRequest, textStatus, errorThrown) {
+                            alert("Fail");
+                        });
                 }
                 else {
-                swal("Your imaginary file is safe!");
+                    swal("Your imaginary file is safe!");
                 }
             });
 
@@ -162,8 +188,8 @@
         //            alert("Fail");
         //        });
         //}
-        });
-    
+    });
+
 
     var products = [];
 
