--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -32,6 +32,7 @@
         <input name="isFeatured" type="radio" value="False" />False
     </div>
         <button id="saveBtn" type="button">Save</button>
+        <button id="cancelBtn" type="button">Cancel</button>
 </form>
     </div>
 <script>
@@ -79,15 +80,26 @@
         var searchValue = $("#searchTxt").val();
         $.ajax({
             type: 'POST',
-            url: '/Category/Create',
+            //url: '/Category/Create',
+            url:'@Url.Action("Create","Category")',
             data: $("#createcategory").serialize()
         })
             .done(function (response) {
                 $("#tableContainer").html(response);
                 $("#actionContainer").html("");
+                focusAction("tableContainer");
             })
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
     });
+
+
+    $("#cancelBtn").click(function () {
+        $("#actionContainer").html("");
+        focusAction("tableContainer");
+    });
+
+    
+
 </script>
