--- a/ClothBazar.Web/Views/Category/Edit.cshtml
+++ b/ClothBazar.Web/Views/Category/Edit.cshtml
@@ -22,6 +22,7 @@
     <input name="isFeatured" type="radio" value="False" @falseChecked />False
     <br />
     <button id="updateBtn" type="submit">Save</button>
+    <button id="cancelBtn" type="submit">Cancel</button>
 </form>
 
 
@@ -37,9 +38,18 @@
             .done(function (response) {
                 $("#tableContainer").html(response);
                 $("#actionContainer").html("");
+                focusAction("tableContainer");
             })
             .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("Fail");
             });
     });
+
+
+    $("#cancelBtn").click(function () {
+        $("#actionContainer").html("");
+        focusAction("tableContainer");
+    });
+
+
 </script>
