--- a/ClothBazar.Web/Views/Category/Index.cshtml
+++ b/ClothBazar.Web/Views/Category/Index.cshtml
@@ -19,3 +19,14 @@
     </div>
 
 </div>
+
+
+
+<script>
+    function focusAction(controltofocus) {
+        $('html, body').animate({
+            scrollTop: $("#" + controltofocus).offset().top - 100
+        }, 1000);
+    }
+
+</script>
